welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: not found: value weekday
  if (vacation & !weekday) {
                  ^alarmClock:5: error: not found: value weekday
  if (vacation & weekday) {
                 ^alarmClock:8: error: not found: value weekday
  if ( !vacation & weekday) {
                   ^alarmClock:11: error: not found: value weekday
  if(!vacation & !weekday) {
                  ^alarmClock:11: error: type mismatch;
 found   : Unit
 required: String
  if(!vacation & !weekday) {
  ^